--- a/Env/env.yaml
+++ b/Env/env.yaml
@@ -7,5 +7,5 @@ spec:
     - name: nginx
       image: nginx
       env:
-        Trainer: naveen
-        course: Devops
+        - Trainer: naveen
+        - course: Devops
