--- a/Env/env.yaml
+++ b/Env/env.yaml
@@ -7,5 +7,7 @@ spec:
     - name: nginx
       image: nginx
       env:
-        - Trainer: naveen
-        - course: Devops
+        - name: Trainer
+          value: naveen
+        - name: course
+          value: Devops
